# Archlinux-Backup

./: CMakeNotes.md  GitNotes.md  README.md  VIMRC  VimNotes.md  XX-NET_appid.txt  XX-Net.desktop  archiso.txt  some-script  terminalrc  ycm_extra_conf.py
Cpp/: heston.cc  test.cpp
Cpp/Plot in R/: ISLR.r  a.out  r.cc  test.eps
Cpp/heston-mle-cpp/: InitialMoments.hpp  Parameter.h  Readme.md  test_initialMoments  test_initialMoments.cpp
Cpp/heston-mle-cpp/InitialMoments/: CMakeLists.txt  loglike.cpp  test_initialMoments.cpp
Cpp/heston-mle-cpp/InitialMoments/include/: InitialMoments.hpp  Parameter.h
Cpp/heston-mle-cpp/InitialMoments/res/: test_gammainc.cpp
Cpp/test-cmake/: main2.cc  main3.cc
Notes/: Awesome-gtk  CMakeNotes.md  arch-guide.md  some-script
Test-LaTeX-xetex/: test2.tex
boost_python/hello_world/: CMakeLists.txt  Readme.md  hello.cpp
dotfiles/: .Xresources  .vimrc  .xinitrc  .zshrc  hosts
dotfiles/.aria2/: aria2.conf
dotfiles/i3/: conkyrc
i3-dotfiles/: .vimrc  .zshrc  hosts
i3-dotfiles/.aria2/: another_aria2.conf  untitled
i3-dotfiles/i3/: config  conkyrc_bp
i3-dotfiles/i3_backup/: config
i3-dotfiles/polybar/: config
test-cmake/: CMakeLists.txt  Readme.md  main1.cc  main3.cc
test-cmake/src/: MathFun.cc
